    of the other connected clients (with SessionAction.Lives)
    <https://papyrus.usask.ca/trac/gt/ticket/68>

  * We have introduced some high-level debugging views that use GT's
    hooks to provide graphs and report statistics on messaging behaviours
    <https://papyrus.usask.ca/trac/gt/ticket/51>
    <https://papyrus.usask.ca/trac/gt/ticket/52>


Interoperability changes:
=========================

  * The LightweightDotNetSerializingMarshaller and
    DotNetSerializingMarshaller on-wire formats have changed, which
    will break compatibility with previous releases.  Previously
    these marshallers recorded the marshalled payload length using
    an adaptive scheme.  This meant that many message types had to
    be serialized to an interim buffer to determine the length, and
    then copied; this was rather wasteful.  To avoid this duplicate
    copy, the payload length is now a fixed-length value.  As a
    result, the internal requirement of
    LightweightDotNetSerializingMarshaller have changed such that
    the Marshal* methods are no longer responsible for encoding the
    payload length.

  * With the introduction of the LargeObjectMarshaller, both
    DefaultClientConfiguration and DefaultServerConfiguration have
    been changed to now use the LargeObjectMarshaller.  Although
    the on-wire formats will not change except for messages that
    exceed a single packet, the marshaller descriptors will have
    changed which **may** cause connection negotiation issues with
    older clients.

  * System.BitConverter is not endian-agnostic.  We have provided a
    new class, GT.Utils.DataConverter, to provide byte-level conversion
    for most primitive types; the default converter is a LittleEndian
    converter (since GT will be mostly used on LE machines).  This
    change will only affect communication between BE machines.
    Fixed <https://papyrus.usask.ca/trac/gt/ticket/81>.


Developer-visible changes:
==========================
